@@ -44,6 +44,9 @@ try {
         if ($cmd->getType() == 'action' && !$eqLogic->hasRight('x')) {
             throw new Exception(__('Vous n\'êtes pas autorisé à faire cette action', __FILE__));
         }
+        if ($cmd->getType() == 'action' && $cmd->getConfiguration('actionCodeAccess') != '' && sha1(init('codeAccess')) != $cmd->getConfiguration('actionCodeAccess')){
+            throw new Exception(__('Cette action nécessite un code d\'accès', __FILE__),-32005);
+        }
         ajax::success($cmd->execCmd(init('value', null), init('cache', 1)));
     }
 
