@@ -195,7 +195,7 @@ $cmd_widgetMobile = cmd::availableWidget('mobile');
                     </div>
 
                     <div class="form-group">
-                    <label class="col-lg-3 col-md-3 col-sm-4 col-xs-6 control-label">{{Retour à la ligne forcé avant le widget}}</label>
+                        <label class="col-lg-3 col-md-3 col-sm-4 col-xs-6 control-label">{{Retour à la ligne forcé avant le widget}}</label>
                         <div class="col-xs-1">
                             <input type="checkbox" class="cmdAttr" data-l1key="display" data-l2key="forceReturnLineBefore" />
                         </div>
@@ -210,6 +210,16 @@ $cmd_widgetMobile = cmd::availableWidget('mobile');
                         <label class="col-lg-3 col-md-3 col-sm-4 col-xs-6 control-label">{{Formule de calcul (#value# pour la valeur)}}</label>
                         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
                             <input class="cmdAttr form-control" data-l1key="configuration" data-l2key="calculValueOffset" />
+                        </div>
+                    </div>
+                    <?php } ?>
+
+
+                    <?php if ($cmd->getType() == 'action') { ?>
+                    <div class="form-group">
+                        <label class="col-lg-3 col-md-3 col-sm-4 col-xs-6 control-label">{{Code d'accès}}</label>
+                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+                            <input type="password" class="cmdAttr form-control" data-l1key="configuration" data-l2key="actionCodeAccess" />
                         </div>
                     </div>
                     <?php } ?>
